# CelestialCore

./: .gitignore  CMakeLists.txt  CelestialCore_Export.h  GameObject.cpp  GameObject.h  LEARNING_RESOURCES.md  README.md  main.cpp  run_editor.bat  run_editor.sh  run_game.bat  run_game.sh  setup_imgui.bat  setup_imgui.sh
Objects/: GameObject.cpp  GameObject.h  GameSprite.cpp  GameSprite.h  maps.h
examples/: AssetManagerUsage.cpp  SharedLibraryUsage.cpp
modules/: Transformation.cpp  Transformation.h  Visual.cpp  Visual.h
subsystems/: AssetManager.cpp  AssetManager.h  AssetManager_README.md  Audio.cpp  Audio.h  HandleInput.cpp  HandleInput.h  Render.cpp  Render.h
ui/editor/: CMakeLists.txt  EditorMain.cpp  EditorMain.h  README.md  main.cpp
